add nav link to other pages

--- a/index.html
+++ b/index.html
@@ -64,8 +64,17 @@
   <body>
     <header>
       <nav>
-        <a href="/">Home</a><a href="/about">About</a
-        ><a href="/contact">Contact</a>
+        <ul class="hstack">
+          <li>
+            <a href="/">Home</a>
+          </li>
+          <li>
+            <a href="about.html">About</a>
+          </li>
+          <li>
+            <a href="contact.html">Contact</a>
+          </li>
+        </ul>
       </nav>
     </header>
     <main>
